Multi language logic